[tool.poetry]
name = "digitalhack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
catboost = "^1.2.2"
scikit-learn = "^1.3.1"
poethepoet = "^0.24.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda12 = "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121"
tsfresh_install = "pip install tsfresh"
